# Nargis

./: .dockerignore  .gitignore  .gitkeep  .htmlhintrc  .nojekyll  .prettierignore  .prettierrc  .stylelintrc.json  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Codebase.txt  PLANNING.md  README.md  ROADMAP.md  SPRINTS.md  TECHSTACK.md  _config.yml  biome.json  body.html  eslint.config.js  index.html  package-lock.json  package.json  script.js  style.css  tsconfig.node.json  turbo.json  vite.config.ts
.github/workflows/: _config.yml  ci-and-deploy.yml  ci-and-publish.yml  ci-cd.yml  ci.yml  deploy.yml  integration.yml  jekyll-docker.yml
.turbo/cache/: 1f3b113f5eedaa5c-meta.json  1f3b113f5eedaa5c.tar.zst  26b72480f4892948-meta.json  26b72480f4892948.tar.zst  3cf0b5b83e9e5587-meta.json  3cf0b5b83e9e5587.tar.zst  751e8541bda49840-meta.json  751e8541bda49840.tar.zst  960453475fcdc6ff-meta.json  ad857c0e9c2bc3a0-meta.json  ad857c0e9c2bc3a0.tar.zst  c9ab96bb385f0f20-meta.json  c9ab96bb385f0f20.tar.zst  cb04c497162d31dc-meta.json  cb04c497162d31dc.tar.zst  e459638290551847-meta.json  e459638290551847.tar.zst
.turbo/daemon/: 27d391d570c8249d-turbo.log.2025-09-18  27d391d570c8249d-turbo.log.2025-09-19  27d391d570c8249d-turbo.log.2025-09-20  27d391d570c8249d-turbo.log.2025-09-21  27d391d570c8249d-turbo.log.2025-09-22  27d391d570c8249d-turbo.log.2025-09-23  27d391d570c8249d-turbo.log.2025-10-01
apps/api-go/: Dockerfile  fly.toml  go.mod  main.go
apps/api-py/: .dockerignore  API_DOCS.md  Dockerfile  README.md  __init__.py  alembic.ini  app_factory.py  conftest.py  fly.toml  main.py  pyproject.toml  requirements.base.txt  requirements.hashed.txt  requirements.light.txt  requirements.ml.txt  requirements.txt  run_test_ai_clients.py  smoke_test_core.py  test_ai_clients.py  test_api.py  test_auth.py  tmp_debug_streak.py  verify_memory.py
apps/api-py/agent/: __init__.py  graph.py  tools.py
apps/api-py/api_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api-py/middleware/: idempotency.py
apps/api-py/migrations/: env.py
apps/api-py/migrations/versions/: 0e71654220b6_add_memory_vector.py  2c57af0ad498_initial_schema_with_all_models.py  4c7f1e2f0f8a_add_habit_entries_table.py  9ad8cd9dc578_merge_heads.py  a3f9b1d7c4ea_add_idempotency_keys.py  d1fa08afa045_add_memory_vector_fresh.py  e2b3c4d5e6f7_consolidate_goals_into_tasks.py
apps/api-py/routers/: agent.py  audio_pipeline.py  auth.py  auth_db.py  goals.py  habits.py  internal.py  journal.py  pomodoro.py  realtime.py  resource_access.py  response_models.py  system.py  tasks.py
apps/api-py/scripts/: run_integration.ps1  setup_env.ps1  setup_env.sh
apps/api-py/services/: __init__.py  agent_service.py  ai_clients.py  analytics.py  context.py  event_bus.py  goals.py  habits.py  idempotency.py  journal.py  memory.py  memory_service.py  pomodoro.py  proactive.py  tasks.py
apps/api-py/storage/: __init__.py  database.py  memory.py  models.py
apps/api-py/tests/: run_inprocess_tests.py  smoke_memory_test.py  test_agent_flow.py  test_cookie_auth.py  test_habits_streak.py  test_idempotency.py  test_memory_service.py  test_services_habits.py  test_services_journal.py  test_stream_cancel.py
apps/api-py/tests/integration/: test_agent_flow.py  test_ai_clients.py  test_api.py  test_auth.py  test_cookie_auth.py  test_journal_briefing.py  test_process_audio_normalization.py  test_response_sanitized.py  test_stream_cancel.py
apps/api-py/tests/unit/: test_agent_service_events.py  test_agent_tools.py  test_event_bus.py  test_habits_streak.py  test_idempotency.py  test_internal_router.py  test_memory_service.py  test_router_contracts.py  test_services_habits.py  test_services_journal.py  test_services_proactive.py  test_services_tasks.py
apps/api-py/utils/: response.py
apps/core-go/: .air.toml  .dockerignore  Dockerfile  README.md  go.mod  go.sum  main.go
apps/core-go/cmd/server/: deps.go  health.go  main.go  main_integration_test.go  main_unit_test.go  proxy.go  runtime.go  test_helpers_test.go  websocket.go
apps/core-go/internal/auth/: middleware.go  middleware_test.go  tracing.go
apps/core-go/internal/bus/: client.go
apps/core-go/internal/config/: config.go
apps/gateway/: .air.toml  .dockerignore  Dockerfile  README.md  fly.toml  go.mod  go.sum  main.go  main_integration_test.go  main_unit_test.go
apps/ml-worker/: Dockerfile  main.py  pyproject.toml
apps/web/: .env.example  Dockerfile  README.md  middleware.ts  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/web/playwright-report/: index.html
apps/web/tests/: chat.spec.ts  chatPanel.accessibility.test.tsx  chatPanel.spec.tsx  chatPanel.stop.test.tsx  chatPanel.test.tsx  habitContext.integration.test.tsx  mocks.ts  navbar.promptBar.test.tsx  pomodoroContext.integration.test.tsx  realtimeContext.integration.test.tsx  realtimeContext.provider.test.tsx  realtimeContext.spec.tsx  realtimeContext.test.tsx  realtimeEvents.test.ts  setup.ts  system.test.ts  taskContext.integration.test.tsx  toastContext.test.tsx
docs/: DEPLOYMENT.md  PRODUCTION_CHECKLIST.md  SPRINTS.md  TECHSTACK.md
images/: README.md
images/gallery/: README.md
infra/: README.md  docker-compose.yml
infra/fly/: .env.example  README.md  deploy.ps1
infra/security/: SCAN.md
legacy/frontend-vue/: manifest.json  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
legacy/frontend-vue/src/: main.ts  vite-env.d.ts
music/: README.md
public/pages/: secret.html
sections/: about-notes.md  about.html  gallery.html  music.html  sections.css  sections.js  wall-notes.md
src/: App.vue  main.ts
src/components/: DashboardCard.vue  NavBar.vue  PomodoroPreview.vue  SecretAccess.vue  TaskPreview.vue
src/router/: index.ts
src/stores/: habits.ts  pomodoro.ts  theme.ts
src/views/: Analytics.vue  Dashboard.vue  Pomodoro.vue  Tasks.vue
tools/: mock-orchestrator.js  mock-realtime.js  mock-ws-server.js
tools/smoke/: local_realtime_e2e.sh  prod_smoke.sh  ws_client.js  ws_e2e_client.js
(+151 files in other folders)
