[project]
name = "api-py"
version = "0.1.0"
description = "The Python AI orchestrator for the Nargis productivity platform."
readme = "README.md"
requires-python = "~=3.12.12"

dependencies = [
    "fastapi>=0.119.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.1",
    "openai>=2.6.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "soundfile>=0.13.0",
    "bcrypt>=4.0.0",
    "pyjwt>=2.8.0",
    "email-validator>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.4.0,<0.5",
    "alembic>=1.13.0",
    "langgraph",
    "langchain",
    "langchain-groq",
    "pytest-asyncio>=1.3.0",
    "redis>=7.1.0",
]

[project.optional-dependencies]
# install them with `uv pip install '.[ml]'`.
# This group contains all the heavy ML dependencies
ml = [
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "accelerate",
    "bitsandbytes",
    "hf-xet>=1.2.0",
    # Optional local-only helpers
    "whisperx",
    "openai-whisper",
    "sentence-transformers",
]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "requests>=2.31.0",
    "colorama>=0.4.6",
    "ruff>=0.14.8",
    "mypy>=1.19.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["routers", "storage", "services", "agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

